--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -5,9 +5,11 @@
 @color-4: rgba(0,0,0,.2);
 @color-5: rgba(0,0,0,.05);
 @color-6: #333333;
+@color-7: #f7f7f7;
 
 //basic
 @light-gray:               @color-1;
+@ultra-light-gray:         @color-7;
 @white:                    @color-2;
 @blue:                     @color-3;
 @transparent-black:        @color-4;
