Integrate Row to CashFlow

--- a/src/components/CashFlow/Header/Header.less
+++ b/src/components/CashFlow/Header/Header.less
@@ -47,6 +47,10 @@
       margin-left: 0px;
       border-left: 1px solid @light-gray;
     }
+
+    &:last-child {
+      border-right: 1px solid @light-gray;
+    }
   }
 
   &__month {
