--- a/src/components/CashFlow/LeftBar/LeftBar.less
+++ b/src/components/CashFlow/LeftBar/LeftBar.less
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: flex-end;
     width: 208px;
-    padding: 5px 10px 4px;
+    padding: 5px 10px;
     border: 1px solid @light-gray;
     border-top: none;
     background: @white;
