--- a/src/components/CashFlow/Row/Row.less
+++ b/src/components/CashFlow/Row/Row.less
@@ -3,6 +3,7 @@
 .cash-flow-row {
   &__task-timeline {
     position: relative;
+    height: 28px;
     margin-left: 230px;
     border: 1px solid @light-gray;
     border-top: none;
@@ -16,6 +17,7 @@
   }
 
   &__task-duration {
+    position: absolute;
     height: 28px;
     background: @white;
     text-align: center;
