Change name of css prop

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -14,4 +14,4 @@
 @blue:                     @color-3;
 @transparent-black:        @color-4;
 @transparent-black-2:      @color-5;
-@text:                     @color-6;
+@black:                     @color-6;
