--- a/src/components/CashFlow/LeftBar/LeftBar.less
+++ b/src/components/CashFlow/LeftBar/LeftBar.less
@@ -28,5 +28,6 @@
     border-left: 1px solid @light-gray;
     line-height: 28px;
     text-align: center;
+    box-shadow: inset -2px 0px 0px 0px @blue;
   }
 }
