--- a/src/components/CashFlow/Row/Row.less
+++ b/src/components/CashFlow/Row/Row.less
@@ -28,6 +28,10 @@
     margin-top: 90px;
   }
 
+  &:nth-last-child(2) {
+    margin-bottom: 27px;
+  }
+
   &__description p {
     color: @white;
   }
