--- a/src/components/CashFlow/Header/Header.less
+++ b/src/components/CashFlow/Header/Header.less
@@ -18,8 +18,10 @@
     background: @white;
 
     h1 {
+      display: block;
+      margin: 0 auto;
+      font-size: 26px;
       line-height: 88px;
-      text-align: center;
     }
   }
 
