--- a/src/components/CashFlow/Footer/Footer.less
+++ b/src/components/CashFlow/Footer/Footer.less
@@ -27,6 +27,7 @@
     line-height: 28px;
     text-align: center;
     background: @blue;
+    font-size: 15px;
   }
 
   &-row {
@@ -50,6 +51,7 @@
       border-left: none;
       background: @white;
       box-shadow: inset 0px 2px 0px 0px @blue;
+      font-size: 15px;
 
       &:nth-child(2) {
         margin-left: 230px;
