--- a/src/components/CashFlow/Row/Row.less
+++ b/src/components/CashFlow/Row/Row.less
@@ -10,6 +10,7 @@
     border-left: none;
     background: linear-gradient(90deg, @light-gray 1%, transparent 1%) -1px, @ultra-light-gray;
     background-size: 111px 1px;
+    font-size: 15px;
 
     &:last-child {
       border-right: none;
