Add project selector

--- a/src/components/CashFlow/Header/Header.less
+++ b/src/components/CashFlow/Header/Header.less
@@ -17,11 +17,12 @@
     border: 1px solid @light-gray;
     background: @white;
 
-    h1 {
-      display: block;
-      margin: 0 auto;
-      font-size: 26px;
-      line-height: 88px;
+    .cash-flow-project-select {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 148px;
+      padding: 0 15px;
     }
   }
 
