--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -6,6 +6,7 @@
 @color-5: rgba(0,0,0,.05);
 @color-6: #333333;
 @color-7: #f7f7f7;
+@color-8: #f44336;
 
 //basic
 @light-gray:               @color-1;
@@ -14,4 +15,5 @@
 @blue:                     @color-3;
 @transparent-black:        @color-4;
 @transparent-black-2:      @color-5;
-@black:                     @color-6;
+@black:                    @color-6;
+@red:                      @color-8;
