--- a/src/components/CashFlow/Header/Header.less
+++ b/src/components/CashFlow/Header/Header.less
@@ -11,8 +11,8 @@
   &__title {
     position: absolute;
     display: flex;
-    justify-content: space-between;
-    width: 278px;
+    justify-content: flex-end;
+    width: 449px;
     height: 88px;
     border: 1px solid @light-gray;
     background: @white;
@@ -21,7 +21,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 148px;
+      width: 108px;
       padding: 0 15px;
     }
   }
@@ -33,8 +33,22 @@
     text-align: center;
   }
 
+  &__description {
+    width: 150px;
+    border-left: 1px solid @light-gray;
+    line-height: 88px;
+    text-align: center;
+  }
+
+  &__unit {
+    width: 50px;
+    border-left: 1px solid @light-gray;
+    line-height: 88px;
+    text-align: center;
+  }
+
   &__year {
-    margin-left: 280px;
+    margin-left: 451px;
     background: @white;
 
     &-title {
