Remove select project from header component

--- a/src/components/CashFlow/Header/Header.less
+++ b/src/components/CashFlow/Header/Header.less
@@ -27,6 +27,12 @@
     }
   }
 
+  &__key {
+    width: 85px;
+    text-align: center;
+    line-height: 85px;
+  }
+
   &__total {
     width: 100px;
     border-left: 1px solid @light-gray;
@@ -35,7 +41,7 @@
   }
 
   &__description {
-    width: 150px;
+    width: 211px;
     border-left: 1px solid @light-gray;
     line-height: 88px;
     text-align: center;
