--- a/src/components/CashFlow/LeftBar/LeftBar.less
+++ b/src/components/CashFlow/LeftBar/LeftBar.less
@@ -13,7 +13,6 @@
   &__task-name {
     display: flex;
     justify-content: flex-end;
-    width: 449px;
     height: 28px;
     border: 1px solid @light-gray;
     border-top: none;
@@ -23,7 +22,10 @@
   }
 
   &__key {
-    margin-right: 15px;
+    width: 75px;
+    font-size: 15px;
+    text-align: right;
+    padding-right: 10px;
   }
 
   &__total {
@@ -36,7 +38,7 @@
   }
 
   &__description {
-    width: 140px;
+    width: 201px;
     padding: 0 5px;
     border-left: 1px solid @light-gray;
     line-height: 28px;
