Fix Topbar styles

--- a/src/components/TopBar/TopBar.less
+++ b/src/components/TopBar/TopBar.less
@@ -5,6 +5,8 @@
   width: calc(100% - 17px);
   display: flex;
   justify-content: space-between;
+  z-index: 300;
+  background: @white;
 
   .cash-flow-project-select {
     .MuiInput-underline:before {
