Swap Unit and Description, align total to left

--- a/src/components/CashFlow/LeftBar/LeftBar.less
+++ b/src/components/CashFlow/LeftBar/LeftBar.less
@@ -29,10 +29,10 @@
   }
 
   &__total {
-    width: 100px;
+    width: 90px;
+    padding: 0 0 0 10px;
     border-left: 1px solid @light-gray;
     line-height: 28px;
-    text-align: center;
     box-shadow: inset -2px 0px 0px 0px @blue;
     font-size: 15px;
   }
