Fix margin in top bar

--- a/src/components/TopBar/TopBar.less
+++ b/src/components/TopBar/TopBar.less
@@ -8,6 +8,10 @@
   z-index: 300;
   background: @white;
 
+  h1 {
+    margin-left: 10px;
+  }
+
   .cash-flow-project-select {
     .MuiInput-underline:before {
       border-color: transparent;
