Change align columns in leftBar

--- a/src/components/CashFlow/LeftBar/LeftBar.less
+++ b/src/components/CashFlow/LeftBar/LeftBar.less
@@ -23,18 +23,18 @@
 
   &__key {
     width: 75px;
+    padding: 0 5px;
     font-size: 15px;
-    text-align: right;
-    padding-right: 10px;
   }
 
   &__total {
-    width: 90px;
-    padding: 0 0 0 10px;
+    width: 80px;
+    padding: 0 10px;
     border-left: 1px solid @light-gray;
     line-height: 28px;
     box-shadow: inset -2px 0px 0px 0px @blue;
     font-size: 15px;
+    text-align: right;
   }
 
   &__description {
@@ -42,7 +42,6 @@
     padding: 0 5px;
     border-left: 1px solid @light-gray;
     line-height: 28px;
-    text-align: center;
     font-size: 15px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -50,10 +49,10 @@
   }
 
   &__unit {
-    width: 50px;
+    width: 40px;
+    padding: 0 5px;
     border-left: 1px solid @light-gray;
     line-height: 28px;
-    text-align: center;
     font-size: 15px;
   }
 }
