Add placeholder to project selector

--- a/src/components/ProjectSelect/ProjectSelect.less
+++ b/src/components/ProjectSelect/ProjectSelect.less
@@ -1,6 +1,10 @@
 @import '../../less/colors.less';
 
 .cash-flow-project-select {
+  &__placeholder {
+    color: @dark-gray;
+  }
+
   .MuiInput-underline:after {
     border-color: @blue;
   }
