--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -7,10 +7,12 @@
 @color-6: #333333;
 @color-7: #f7f7f7;
 @color-8: #f44336;
+@color-9: rgba(0, 0, 0, 0.5);
 
 //basic
 @light-gray:               @color-1;
 @ultra-light-gray:         @color-7;
+@dark-gray:                @color-9;
 @white:                    @color-2;
 @blue:                     @color-3;
 @transparent-black:        @color-4;
